# LiRu

./: .gitignore  README.md  sensors-readings.md
documentation/: index.md
liru-core/: Cargo.toml  build_log.txt  memory.x  pins.md
liru-core/.cargo/: config.toml
liru-core/src/: bluetooth.rs  main-sensors.rs  main.rs  motors.rs  sensors.rs
liru-dashboard/: index.html  package-lock.json  package.json
liru-dashboard/bridge/: package-lock.json  package.json  server.js
liru-dashboard/src/: App.tsx
liru-dashboard/src/components/: ControlPad.tsx  SensorDisplay.tsx  SpeedControl.tsx  StatusPanel.tsx
liru-dashboard/src/hooks/: useRobotConnection.ts
